--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <url>http://www.example.com</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
   </properties>
   
   <dependencies>
@@ -69,4 +69,8 @@
       </plugins>
     </pluginManagement>
   </build>
+
+  <modules>
+    <module>imprest-web</module>
+  </modules>
 </project>
